<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBluekins</string>
    <string name="title_activity_main">MyBluekins</string>
    <string name="pref_cloud_desc">Select this to save the configuration to the cloud and sync across devices</string>
    <string name="pref_cloud_title">Save to Cloudant</string>
    <string name="pref_http_title">Select Protocol</string>
    <string-array name="pref_http_name">
        <item>http</item>
        <item>https</item>
    </string-array>
    <string-array name="pref_http_values">
        <item>http://</item>
        <item>https://</item>
    </string-array>

    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>

    <string name="PREF_KEY_PORT">PORT</string>
    <string name="PREF_KEY_DOMAIN">DOMAIN</string>
    <string name="PREF_KEY_PROTOCOL">PROTOCOL</string>
    <string name="PREF_KEY_USERNAME">USERNAME</string>
    <string name="PREF_KEY_PASSWORD">PASSWORD</string>

    <string name="pref_default_domain">mydomain.com</string>
    <string name="pref_domain_name">Domain</string>
    <string name="pref_default_port">80</string>
    <string name="pref_port_name">Port</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="switch_activity">Switch Account</string>
    <string name="default_job_name">JobName</string>
    <string-array name="tabs">
        <item>Summary</item>
        <item>Queue</item>
        <item>Node Status</item>
        <item>dummy1</item>
        <item>dummy2</item>
        <item>dummy3</item>
    </string-array>
</resources>
